Fix cube action result message height overflow

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -519,6 +519,12 @@ ul.messenger.messenger-fixed.messenger-on-top {
   top: 100px;
 }
 
+/** Set max height and overflow auto **/
+ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-message-inner{
+  max-height: 500px;
+  overflow-y: auto;
+}
+
 /** Enable the text selectable on notification of Messenger **/
 ul.messenger .messenger-message-inner {
   -moz-user-select: text;
